# aoc2021

./: Cargo.toml  LICENSE.txt
01/: count_increasing.py
02/: do.jl
03/src/: main.rs
04/src/: main.rs
06/src/: main.rs
15/src/: input.rs  main.rs
16/: Cargo.toml
16/src/: input.rs  main.rs
17/: main.py
22/: Cargo.toml
22/src/: main.rs
24/: Cargo.toml
24/src/: alu.rs  main.rs
src/1/: main.rs
src/10/: main.rs
src/11/: main.rs
src/14/: main.rs
src/15/: main.rs
src/16/: main.rs
src/17/: main.rs
src/2/: main.rs
src/20/: main.rs
src/21/: main.rs
src/3/: main.rs
src/4/: main.rs
src/5/: main.rs
src/6/: main.rs
src/7/: main.rs
src/8/: main.rs
src/9/: main.rs
src/template/: main.rs
